# akticom_test

./: .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
csv_parser/: forms.py  models.py  services.py  urls.py  views.py
csv_parser/migrations/: 0001_initial.py
csv_parser/templates/csv_parser/: _include-navbar.html  detail.html  index.html  list.html
csv_parser/tests/: test_services.py
