[tool.poetry]
name = "acticom"
version = "0.1.0"
description = ""
authors = ["1koro <ok@hustn.cn>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
gspread = "^5.4.0"
pandas = "^1.4.3"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
